Called service to get task list

--- a/src/app/modules/task/task.component.html
+++ b/src/app/modules/task/task.component.html
@@ -24,4 +24,4 @@
     </div>
 </div>
 
-<app-modal-form #appModalForm labelName="Add new To-Do"></app-modal-form>
+<app-modal-form #appModalForm [labelName]="labelName"></app-modal-form>
