--- a/src/app/modules/task/task.component.html
+++ b/src/app/modules/task/task.component.html
@@ -28,5 +28,6 @@
 
 <app-modal-form #appModalForm 
     [labelName]="labelName"
+    [formData]="formData"
     (eventFormAction)="onEventFormAction($event)">
 </app-modal-form>
